<resources>
    <string name="app_name">Fagito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="fagito_logo">Fagito Logo</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="preference_file_key">jsonToken</string>
    <string name="close">Close</string>
    <string name="product_image">Product Image</string>
    <string name="name_of_the_product_should_be_here">Name of the product should be here</string>
    <string name="you_can_eat">You can eat.</string>
    <string name="loading">Loading...</string>
    <string name="product_not_found">Product not found.</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="some_suggestion_for_you">Some suggestion for you</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="peanuts">Peanuts</string>
    <string name="soya">Soya</string>
    <string name="wheat">Wheat</string>
    <string name="nuts">Nuts</string>
    <string name="milk">Milk</string>
    <string name="none">None</string>
    <string name="sulphite">Sulphite</string>
    <string name="please_pay_attention">Please pay attention!</string>
    <string name="got_it">Got it!</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="next"><![CDATA[Next ->]]></string>
    <string name="logout">logout</string>
    "
</resources>